# kplotting

./: .git-blame-ignore-revs  .reviewboardrc  CMakeLists.txt  KF5PlottingConfig.cmake.in  KF6PlottingConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  kplotaxistest.cpp  kplotobjecttest.cpp  kplotpointtest.cpp  kplotwidgettest.cpp
examples/: CMakeLists.txt  testplot_main.cpp  testplot_widget.cpp  testplot_widget.h
src/: CMakeLists.txt  kplotaxis.cpp  kplotaxis.h  kplotobject.cpp  kplotobject.h  kplotpoint.cpp  kplotpoint.h  kplotting-index.qdoc  kplotting.qdoc  kplotting.qdocconf  kplotwidget.cpp  kplotwidget.h
src/designer/: CMakeLists.txt
